styling top font

--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
+h2 {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .main {
     display: flex;
     flex-direction: row;
@@ -19,13 +27,32 @@ body {
     padding: 0;
 }
 
-.left {
+.leftside {
     background-image: url('./images/block-island-beaches.jpg');
     width: 35vw;
+    background-repeat: no-repeat;
+    background-size: auto;
+    color: white;
+    font-family: ;
 }
 
-.right{
+.rightside{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     width: 50vw;
+    padding-left: 8%;
+    padding-right: 8%;
+    align-content: center;
+}
+
+.top {
+    height: 30vh;
+}
+
+.middle {
+    height: 30vh;
+}
+
+.bottom {
+    height: 30vh;
 }
